--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="css/main.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="js/app.js"></script>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8I35r0H5JCTfqVF0FP_qqKff3SkxrtpE&callback=initMap"></script>
     </head>
     <body>
-        <h1>Neighborhood Map</h1>
-        <div id="map"></div>
+        <div id="container">
+            <h1>Neighborhood Map</h1>
+            <div id="map"></div>
+        </div>
     </body>
 </html>
