--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
-        <link rel="stylesheet" href="css/main.css">
-    </head>
-    <body>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+    <nav role="navigation" id="drawer">
+        <ul data-bind="foreach: locations" id="location-items">
+            <li class="location-item">
+                <a href="#" data-bind="text: name" class="location-link"></a>
+            </li>
+        </ul>
+    </nav>
+    <div id="container">
+        <a id="menuToggle" href="#">☰</a>
         <div id="map"></div>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8I35r0H5JCTfqVF0FP_qqKff3SkxrtpE"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script>
-        <script src="js/app.js"></script>
-    </body>
+    </div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8I35r0H5JCTfqVF0FP_qqKff3SkxrtpE"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script>
+    <script src="js/app.js"></script>
+</body>
 </html>
