css/index: Add filter input field; Increase drawer width

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <nav role="navigation" id="drawer">
+        <div id="search-container">
+            &#128269<input type="text" name="location-filter" id="location-filter">
+        </div>
         <ul data-bind="foreach: locations" id="location-items">
             <li class="location-item">
                 <a href="#" data-bind="text: name" class="location-link"></a>
